募集一覧の変更

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div data-include="views/home.html" data-css="styles/home.css"></div>
     <div data-include="views/ai.html" data-css="styles/ai.css"></div>
     <div data-include="views/chat.html" data-css="styles/chat.css"></div>
+    <div data-include="views/recruit.html" data-css="styles/recruit.css"></div>
   </main>
 
   <!-- プロフィール詳細モーダル（インクルード） -->
